--- a/templates/layout.latte
+++ b/templates/layout.latte
@@ -2,38 +2,36 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Page Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <title>Laboratory of Mössbauer Spectroscopy</title>
+
+    <link href='https://fonts.googleapis.com/css?family=Roboto:400,700,400italic' rel='stylesheet' type='text/css'>
 
     <link rel="stylesheet" href="public/css/master.css">
 </head>
 <body>
 
-<heade role="banner">
+<header role="banner" id="header">
     <div class="row">
         <div class="large-12 columns">
-            <a href="/">
-                <img src="public/img/logo.gif" alt="" title="">
-                <span>
-                    Laboratory of Mössbauer Spectroscopy<br>
-                    <small>Faculty of Mathematics and Physics,<br>Charles University in Prague</small>
-                </span>
+            <a href="/" id="logo">
+                Laboratory of Mössbauer Spectroscopy
             </a>
         </div>
     </div>
-</heade>
+</header>
 
-<nav role="navigation">
+<nav role="navigation" id="menu">
     <div class="row">
         <div class="large-12 columns">
-            <ul>
-                <li>
-                    <a href="">Home</a>
-                    <a href="">About the lab</a>
-                    <a href="">For students</a>
-                    <a href="">For collaborators</a>
-                    <a href="">For staff</a>
-                    <a href="">Contact</a>
-                </li>
+            <ul id="main-menu">
+                <li><a href="" class="active">Home</a></li>
+                <li><a href="">About the lab</a></li>
+                <li><a href="">For students</a></li>
+                <li><a href="">For collaborators</a></li>
+                <li><a href="">For staff</a></li>
+                <li><a href="">Contact</a></li>
             </ul>
         </div>
     </div>
