--- a/templates/home/home.latte
+++ b/templates/home/home.latte
@@ -39,31 +39,45 @@
             </div>
         </div>
     </div>
-    <div class="row" id="callout">
-        <div class="large-12 columns">
-            <p>
-                Interested in Mössbauer spectroscopy? Have a look at the <a href="" class="button radius small">student positions</a>
-            </p>
+
+    <div id="callout">
+        <div class="row">
+            <div class="large-12 columns">
+                <p>
+                    Interested in Mössbauer spectroscopy? Have a look at the <a href="" class="button radius small">student positions</a>
+                </p>
+            </div>
         </div>
     </div>
-    <div class="row">
-        <div class="large-12 columns">
-            <div class="grid">
-                <div class="grid-item">
-                    neco
-                </div>
-                <div class="grid-item">
-                    neco
-                </div>
-                <div class="grid-item">
-                    neco
-                </div>
-                <div class="grid-item">
-                    neco
-                </div>
-                <div class="grid-item">
-                    neco
-                </div>
+
+    <div id="news">
+        <div class="row">
+            {for $i = 0; $i < 4; $i++}
+            <div class="large-3 medium-6 small-12 columns {if $i == 3}end{/if}">
+                <article class="article">
+                    <header class="article-header">
+                        {if $i == 0}<a href=""><img src="public/img/cern.png" alt="" title=""></a>{/if}
+                        <h3><a href="">News title</a>  <small class="article-date">19 Oct 15</small></h3>
+                    </header>
+                    <section class="article-section">
+                        <p>
+                        Lorem ipsum dolor sit amet,
+                        consectetur adipiscing elit. Ut
+                        facilisis leo non mi vulputate
+                        luctus.
+                        </p>
+                    </section>
+                    <footer class="article-footer">
+                        <a href="" class="read-more button radius small">read more</a>
+
+                    </footer>
+                </article>
+            </div>
+            {/for}
+            <div class="large-12 columns" id="all-news">
+                <p>
+                    <a href="">See all news..</a>
+                </p>
             </div>
         </div>
     </div>
