--- a/templates/layout.latte
+++ b/templates/layout.latte
@@ -15,8 +15,8 @@
 <header role="banner" id="header">
     <div class="row">
         <div class="large-12 columns">
-            <a href="/" id="logo">
-                Laboratory of Mössbauer Spectroscopy
+            <a href="/">
+                <img src="public/img/logo_transparent.png" alt="" title="">
             </a>
         </div>
     </div>
@@ -38,6 +38,14 @@
 </nav>
 
 {include #content}
+
+<footer role="contentinfo" id="footer">
+    <div class="row">
+        <div class="large-12 columns">
+
+        </div>
+    </div>
+</footer>
 
 <script type="text/javascript" src="public/js/master.js"></script>
 </body>
