--- a/public/src/scss/_style.scss
+++ b/public/src/scss/_style.scss
@@ -217,5 +217,35 @@ body {
 }
 
 #footer {
+  color: #fff;
+  padding-top: 40px;
+  padding-bottom: 40px;
+  h2 {
+    color: #fff;
+    margin: 0;
+    padding: 0;
+    font-size: 24px;
+  }
+  p {
+    margin-top: 15px;
+    font-size: 14px;
+    color: #ccc;
+  }
 
+  ul {
+    margin: 15px 0 0;
+    padding: 0;
+  }
+
+  li {
+    list-style-type: none;
+    a {
+      font-size: 14px;
+      color: #ccc;
+      text-decoration: underline;
+      &:hover {
+        text-decoration: none;
+      }
+    }
+  }
 }
