news and static page

--- a/templates/home/home.latte
+++ b/templates/home/home.latte
@@ -76,7 +76,7 @@
             {/for}
             <div class="large-12 columns" id="all-news">
                 <p>
-                    <a href="">See all news..</a>
+                    <a href="/news">See all news..</a>
                 </p>
             </div>
         </div>
