--- a/templates/layout.latte
+++ b/templates/layout.latte
@@ -27,11 +27,11 @@
         <div class="large-12 columns">
             <ul id="main-menu">
                 <li><a href="" class="active">Home</a></li>
-                <li><a href="">About the lab</a></li>
-                <li><a href="">For students</a></li>
-                <li><a href="">For collaborators</a></li>
-                <li><a href="">For staff</a></li>
-                <li><a href="">Contact</a></li>
+                <li><a href="/about-the-lab">About the lab</a></li>
+                <li><a href="/for-students">For students</a></li>
+                <li><a href="/for-collaborators">For collaborators</a></li>
+                <li><a href="/for-staff">For staff</a></li>
+                <li><a href="/contact">Contact</a></li>
             </ul>
         </div>
     </div>
