--- a/public/src/scss/_style.scss
+++ b/public/src/scss/_style.scss
@@ -249,3 +249,129 @@ body {
     }
   }
 }
+
+.news-entry {
+  margin-bottom: 30px;
+  .th:hover {
+    box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.2);
+  }
+}
+
+.news-image {
+  margin-bottom: 10px;
+}
+
+.news-title {
+  h2 {
+    margin: 0;
+    font-size: 20px;
+    @media #{$medium-up} {
+      font-size: 24px;
+    }
+    padding: 0;
+  }
+  a {
+    color: #c95c5c;
+    transition: 0.1s;
+    &:hover {
+      color: #8d2020;
+      transition: 0.1s;
+    }
+  }
+}
+
+.news-footer {
+  @media #{$medium-up} {
+    font-size: 1rem;
+  }
+  font-size: 14px;
+  margin-top: 5px;
+  color: #999;
+}
+
+.news-intro {
+  p {
+    margin: 0;
+  }
+}
+
+#breadcrumbs {
+  background: #ECE3CA;
+  .breadcrumbs {
+    margin: 0;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    border: none;
+    background: inherit;
+    li {
+      a {
+        color: #ECE3CA - 140;
+      }
+      &.current {
+        font-weight: normal;
+        a {
+          color: #ECE3CA - 120;
+        }
+      }
+      font-size: 11px;
+      font-weight: bold;
+    }
+  }
+}
+
+.pagination {
+  margin-top: 20px;
+  margin-bottom: 40px;
+}
+
+.page-heading {
+  font-size: 20px;
+  text-transform: uppercase;
+  color: #aaa;
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+
+.content {
+  background: #fff;
+}
+
+.page-menu {
+  margin-top: 30px;
+}
+
+.page-menu-heading {
+  text-transform: uppercase;
+  padding: 10px;
+  font-size: 12px;
+  font-weight: 700;
+  border-bottom: 2px solid #e5e5e5;
+}
+
+.page-menu-content {
+  ul {
+    margin: 0;
+    padding: 0;
+  }
+
+  li {
+    list-style-type: none;
+    display: block;
+    padding-top: 5px;
+    padding-bottom: 5px;
+  }
+
+  a {
+    padding: 5px 10px;
+    font-size: 14px;
+    color: #c95c5c;
+    &:hover {
+      color: #8d2020;
+      text-decoration: underline;
+    }
+  }
+}
+
+.static-content {
+  padding-bottom: 50px;
+}
