news entry page

--- a/templates/news/news.latte
+++ b/templates/news/news.latte
@@ -16,12 +16,12 @@
                 <div class="row">
                     <div class="small-12 medium-4 columns">
                         <aside class="news-image">
-                            <a href="" class="th"><img src="public/img/cern.png" alt="" title=""></a>
+                            <a href="/news/news-entry-title" class="th"><img src="/public/img/cern.png" alt="" title=""></a>
                         </aside>
                     </div>
                     <div class="small-12 medium-6 columns end">
                         <header class="news-title">
-                            <h2><a href="">News entry title</a></h2>
+                            <h2><a href="/news/news-entry-title">News entry title</a></h2>
                         </header>
                         <section class="news-intro">
                             <p>
