--- a/templates/layout.latte
+++ b/templates/layout.latte
@@ -8,7 +8,7 @@
 
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,700,400italic' rel='stylesheet' type='text/css'>
 
-    <link rel="stylesheet" href="public/css/master.css">
+    <link rel="stylesheet" href="/public/css/master.css">
 </head>
 <body>
 
@@ -16,7 +16,7 @@
     <div class="row">
         <div class="large-12 columns">
             <a href="/">
-                <img src="public/img/logo_transparent.png" alt="" title="">
+                <img src="/public/img/logo_transparent.png" alt="" title="">
             </a>
         </div>
     </div>
@@ -61,6 +61,6 @@
     </div>
 </footer>
 
-<script type="text/javascript" src="public/js/master.js"></script>
+<script type="text/javascript" src="/public/js/master.js"></script>
 </body>
 </html>
