cockpit main menu

--- a/templates/layout.latte
+++ b/templates/layout.latte
@@ -26,12 +26,7 @@
     <div class="row">
         <div class="large-12 columns">
             <ul id="main-menu">
-                <li><a href="/" class="active">Home</a></li>
-                <li><a href="/about-the-lab">About the lab</a></li>
-                <li><a href="/for-students">For students</a></li>
-                <li><a href="/for-collaborators">For collaborators</a></li>
-                <li><a href="/for-staff">For staff</a></li>
-                <li><a href="/contact">Contact</a></li>
+                {region('MainMenu')}
             </ul>
         </div>
     </div>
