cockpit footer info

--- a/templates/layout.latte
+++ b/templates/layout.latte
@@ -37,20 +37,12 @@
 <footer role="contentinfo" id="footer">
     <div class="row">
         <div class="large-6 columns">
-            <h2>Contact</h2>
-            <p>
-                Oddělení Mössbauerovy spektroskopie<br>
-                KFNT MFF UK<br>
-                V Holešovičkách 2, 180 00 Praha 8<br>
-                Tel.: +420 221 912 771, Fax.: +420 221 912 567,<br>
-                kohout@mbox.troja.mff.cuni.cz
-            </p>
+            {region('FooterContact')}
         </div>
         <div class="large-6 columns">
             <h2>Links</h2>
             <ul>
-                <li><a href="" target="_blank">External link</a></li>
-                <li><a href="" target="_blank">Another External link</a></li>
+                {region('FooterLinks')}
             </ul>
         </div>
     </div>
