--- a/templates/layout.latte
+++ b/templates/layout.latte
@@ -25,7 +25,7 @@
 <nav role="navigation" id="menu">
     <div class="row">
         <div class="large-12 columns">
-            <ul id="main-menu">
+            <ul id="main-menu" class="js-page-menus">
                 {region('MainMenu')}
             </ul>
         </div>
