--- a/templates/news/single.latte
+++ b/templates/news/single.latte
@@ -3,11 +3,10 @@
 {block content}
 
     {include '../breadcrumbs.latte'}
-
     <div class="content static-content">
         <div class="row">
             <div class="large-12 column">
-                <h1 class="page-heading">News entry title</h1>
+                <h1 class="page-heading">{$entry['Title']}</h1>
             </div>
         </div>
 
@@ -15,42 +14,20 @@
             <div class="row">
                 <div class="small-12 medium-4 columns">
                     <aside class="news-image">
-                        <a href="" class="th"><img src="/public/img/cern.png" alt="" title=""></a>
+                        {if isset($entry['Image'])}
+                            <a href="#" class="th"><img src="/{$entry['Image']|substr:5}" alt="" title=""></a>
+                        {/if}
                     </aside>
                 </div>
                 <div class="small-12 medium-6 columns end">
+                    <section class="news-perex">
+                        {$entry['Perex']|noescape}
+                    </section>
                     <section class="news-intro">
-
-                        <p><strong>Pellentesque habitant morbi tristique</strong> senectus et netus et malesuada fames ac turpis
-                            egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu
-                            libero sit amet quam egestas semper. <em>Aenean ultricies mi vitae est.</em> Mauris placerat
-                            eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum
-                            sed, <code>commodo vitae</code>, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt
-                            condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. <a href="#">Donec non
-                                enim</a> in turpis pulvinar facilisis. Ut felis.</p>
-
-                        <h2>Header Level 2</h2>
-
-                        <ol>
-                            <li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</li>
-                            <li>Aliquam tincidunt mauris eu risus.</li>
-                        </ol>
-
-                        <blockquote><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus magna. Cras in mi at
-                                felis aliquet congue. Ut a est eget ligula molestie gravida. Curabitur massa. Donec eleifend,
-                                libero at sagittis mollis, tellus est malesuada tellus, at luctus turpis elit sit amet quam.
-                                Vivamus pretium ornare est.</p></blockquote>
-
-                        <h3>Header Level 3</h3>
-
-                        <ul>
-                            <li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</li>
-                            <li>Aliquam tincidunt mauris eu risus.</li>
-                        </ul>
-
+                        {$entry['Text']|noescape}
                     </section>
                     <footer class="news-footer">
-                        posted on 19 December 2015
+                        posted on {$entry['created']|date:'j F Y'}
                     </footer>
                 </div>
             </div>
