--- a/templates/layout.latte
+++ b/templates/layout.latte
@@ -9,6 +9,7 @@
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,700,400italic' rel='stylesheet' type='text/css'>
 
     <link rel="stylesheet" href="/public/css/master.css">
+    <link rel="icon" type="image/png" href="/public/img/favicon.png">
 </head>
 <body>
 
