latin extended font subset

--- a/templates/layout.latte
+++ b/templates/layout.latte
@@ -6,7 +6,7 @@
 
     <title>Laboratory of Mössbauer Spectroscopy</title>
 
-    <link href='https://fonts.googleapis.com/css?family=Roboto:400,700,400italic' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Roboto:400,400italic,700&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 
     <link rel="stylesheet" href="/public/css/master.css">
     <link rel="icon" type="image/png" href="/public/img/favicon.png">
