--- a/templates/home/home.latte
+++ b/templates/home/home.latte
@@ -30,9 +30,7 @@
     <div id="callout">
         <div class="row">
             <div class="large-12 columns">
-                <p>
-                    Interested in Mössbauer spectroscopy? Have a look at the <a href="" class="button radius small">student positions</a>
-                </p>
+                {region('Callout')}
             </div>
         </div>
     </div>
