--- a/templates/people/person.latte
+++ b/templates/people/person.latte
@@ -20,8 +20,20 @@
             </div>
 
             <div class="large-9 medium-8 columns">
-                <h1 class="page-heading">Mgr. Denisa Kubaniova, PhD.</h1>
+                <h1 class="page-heading">Mgr. Denisa Kubaniova, PhD.<br><small>{$person[Position]}</small></h1>
 
+                <div class="row">
+                    <div class="medium-6 columns">
+                        <img src="/{$person[Image]|substr:5}" alt="" title="">
+                    </div>
+                    <div class="medium-6 columns">
+                        {$person[Contact]|noescape}
+                    </div>
+                </div>
+
+                <br><br>
+
+                {$person[Description]|noescape}
             </div>
         </div>
     </div>
