--- a/templates/people/person.latte
+++ b/templates/people/person.latte
@@ -20,7 +20,7 @@
             </div>
 
             <div class="large-9 medium-8 columns">
-                <h1 class="page-heading">Mgr. Denisa Kubaniova, PhD.<br><small>{$person[Position]}</small></h1>
+                <h1 class="page-heading">{$person[Name]}<br><small>{$person[Position]}</small></h1>
 
                 <div class="row">
                     <div class="medium-6 columns">
