--- a/templates/layout.latte
+++ b/templates/layout.latte
@@ -9,6 +9,7 @@
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,400italic,700&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 
     <link rel="stylesheet" href="/public/css/master.css">
+    <link rel="stylesheet" href="/public/bower_components/lightbox2/dist/css/lightbox.min.css">
     <link rel="icon" type="image/png" href="/public/img/favicon.png">
 </head>
 <body>
@@ -50,5 +51,6 @@
 </footer>
 
 <script type="text/javascript" src="/public/js/master.js"></script>
+<script type="text/javascript" src="/public/bower_components/lightbox2/dist/js/lightbox-plus-jquery.min.js"></script>
 </body>
 </html>
