image gallery fix

--- a/templates/people/people.latte
+++ b/templates/people/people.latte
@@ -33,7 +33,7 @@
                             {/if}
                         </a>
                         <p class="people-name">
-                            <a href="/people/{$p[Name_slug]}">{$p[Name]}</a>
+                            <a href="/people/{$p[Name_slug]}-mobile">{$p[Name]}</a>
                                 <br>
                             {$p[Position]}
                         </p>
