image gallery fix

--- a/templates/gallery/gallery.latte
+++ b/templates/gallery/gallery.latte
@@ -16,7 +16,7 @@
                                 {thumbnail($image[path], 100, 100)}
                             </a>
 
-                            <a class="gallery-item gallery-mobile th" href="/{$image[path]|substr:5}" data-lightbox="{$gallery[slug]}">
+                            <a class="gallery-item gallery-mobile th" href="/{$image[path]|substr:5}" data-lightbox="{$gallery[slug]}-mobile">
                                 {thumbnail($image[path], 50, 50)}
                             </a>
                         {/foreach}
