--- a/public/src/scss/_variables.scss
+++ b/public/src/scss/_variables.scss
@@ -1,2 +1,6 @@
 $bgcolor: #f8f9fa;
 $roboto: 'Roboto', sans-serif;
+$header-color: #222;
+$nav-color: #205285;
+$callout-color: #e4e4e4;
+$contrast-color: #f39c12;
