--- a/templates/layout.latte
+++ b/templates/layout.latte
@@ -8,7 +8,7 @@
 
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,400italic,700&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 
-    <link rel="stylesheet" href="/public/css/master.css">
+    <link rel="stylesheet" href="/public/css/master.css?v=2">
     <link rel="stylesheet" href="/public/bower_components/lightbox2/dist/css/lightbox.min.css">
     <link rel="icon" type="image/png" href="/public/img/favicon.png">
 </head>
