--- a/public/src/scss/_style.scss
+++ b/public/src/scss/_style.scss
@@ -435,3 +435,15 @@ body {
     display: inline-block;
   }
 }
+
+.menu-button {
+  display: inline-block !important;
+  background: #f39c12 !important;
+  padding: 10px !important;
+  margin: 10px !important;
+  border-radius: 3px !important;
+  height: 30px !important;
+  line-height: 10px !important;
+  color: #fff !important;
+  font-size: 13px !important;
+}
