--- a/templates/home/home.latte
+++ b/templates/home/home.latte
@@ -21,6 +21,9 @@
                                 {/foreach}
                             </ul>
                         </div>
+                        <div id="calendar-footer">
+                            <a href="/upcoming">View all</a>
+                        </div>
                     </div>
                 </div>
             </div>
