--- a/templates/layout.latte
+++ b/templates/layout.latte
@@ -8,11 +8,22 @@
 
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,400italic,700&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 
-    <link rel="stylesheet" href="/public/css/master.css?v=3">
+    <link rel="stylesheet" href="/public/css/master.css?v=4">
     <link rel="stylesheet" href="/public/bower_components/lightbox2/dist/css/lightbox.min.css">
     <link rel="icon" type="image/png" href="/public/img/favicon.png">
+    
+    <meta name="google-site-verification" content="jaieeyT4_4ZGoE7M365rvPkrrWYTNp0rnwZi66AEldE" />
 </head>
 <body>
+<script>
+    (function(i,s,o,g,r,a,m){ i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-96949624-1', 'auto');
+    ga('send', 'pageview');
+</script>
 
 <header role="banner" id="header">
     <div class="row">
@@ -52,5 +63,7 @@
 
 <script type="text/javascript" src="/public/js/master.js"></script>
 <script type="text/javascript" src="/public/bower_components/lightbox2/dist/js/lightbox-plus-jquery.min.js"></script>
+
+{block scripts}{/block}
 </body>
 </html>
